Edited: replaced grayText with gray-text and added './' to paths

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <title>
             NewsFeed
         </title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <div class="header">
@@ -16,44 +16,44 @@
             <div class="left">
                 <div class="tile">
                     <div class="image">
-                        <img src="pic.png" alt="">
+                        <img src="./pic.png" alt="">
                     </div>
                     <div class="info">
                         <h1>Title One</h1>
-                        <h5><span class="grayText">Posted on</span> 29 June, 2019 <span class="grayText"><i>// Category:</i></span> Category One</h5>
+                        <h5><span class="gray-text">Posted on</span> 29 June, 2019 <span class="gray-text"><i>// Category:</i></span> Category One</h5>
                         <p>Writers write descriptive paragraphs because their purpose is to describe something. Their point is that something is beautiful or disgusting or strangely intriguing. Writers write persuasive and argument paragraphs because their purpose is to persuade or convince someone.</p>
                         <button onclick="#">Continue Reading</button>
                     </div>
                 </div>
                 <div class="tile">
                     <div class="image">
-                        <img src="pic.png" alt="">
+                        <img src="./pic.png" alt="">
                     </div>
                     <div class="info">
                         <h1>Title Two</h1>
-                        <h5><span class="grayText">Posted on</span> 22 June, 2019 <span class="grayText"><i>// Category:</i></span> Category Two</h5>
+                        <h5><span class="gray-text">Posted on</span> 22 June, 2019 <span class="gray-text"><i>// Category:</i></span> Category Two</h5>
                         <p>Writers write descriptive paragraphs because their purpose is to describe something. Their point is that something is beautiful or disgusting or strangely intriguing. Writers write persuasive and argument paragraphs because their purpose is to persuade or convince someone.</p>
                         <button onclick="#">Continue Reading</button>
                      </div>
                 </div>
                 <div class="tile">
                     <div class="image">
-                        <img src="pic.png" alt="">
+                        <img src="./pic.png" alt="">
                     </div>
                     <div class="info">
                         <h1>Title Three</h1>
-                        <h5><span class="grayText">Posted on</span> 20 June, 2019 <span class="grayText"><i>// Category:</i></span> Category Three</h5>
+                        <h5><span class="gray-text">Posted on</span> 20 June, 2019 <span class="gray-text"><i>// Category:</i></span> Category Three</h5>
                         <p>Writers write descriptive paragraphs because their purpose is to describe something. Their point is that something is beautiful or disgusting or strangely intriguing. Writers write persuasive and argument paragraphs because their purpose is to persuade or convince someone.</p>
                         <button onclick="#">Continue Reading</button>
                     </div>
                 </div>
                 <div class="tile">
                     <div class="image">
-                        <img src="pic.png" alt="">
+                        <img src="./pic.png" alt="">
                     </div>
                     <div class="info">
                         <h1>Title Four</h1>
-                        <h5><span class="grayText">Posted on</span> 18 June, 2019 <span class="grayText"><i>// Category:</i></span> Category Four</h5>
+                        <h5><span class="gray-text">Posted on</span> 18 June, 2019 <span class="gray-text"><i>// Category:</i></span> Category Four</h5>
                         <p>Writers write descriptive paragraphs because their purpose is to describe something. Their point is that something is beautiful or disgusting or strangely intriguing. Writers write persuasive and argument paragraphs because their purpose is to persuade or convince someone.</p>
                         <button onclick="#">Continue Reading</button>
                     </div>
